変更：不要な実装を削除

--- a/package.xml
+++ b/package.xml
@@ -16,6 +16,8 @@
   <depend>pcl_ros</depend>
   <depend>pointcloud_to_laserscan</depend>
 
+  <!-- 実行時の依存関係 -->
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
