--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(rclcpp REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_sensor_msgs REQUIRED)
+find_package(tf2_eigen REQUIRED)
 find_package(pcl_conversions REQUIRED)
 find_package(PCL REQUIRED)
 find_package(pointcloud_to_laserscan REQUIRED)
@@ -39,6 +40,7 @@ ament_target_dependencies(obstacle_cloud_to_scan
 include_directories(
   include
   ${PCL_INCLUDE_DIRS}
+  ${tf2_eigen_INCLUDE_DIRS}
   ${pointcloud_to_laserscan_INCLUDE_DIRS}
 )
 
