--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # ポリシーの設定
+set(CMAKE_POLICY_DEFAULT_CMP0144 NEW)
 if(POLICY CMP0074)
     cmake_policy(SET CMP0074 NEW)
 endif()
